# beam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: beam-production.toml  beam.toml
crates/agent/: Cargo.toml
crates/agent/src/: abr.rs  audio.rs  capture.rs  cli.rs  clipboard.rs  clipboard_sync.rs  cursor.rs  display.rs  encoder.rs  file_transfer_task.rs  filetransfer.rs  h264.rs  input.rs  main.rs  peer.rs  signaling.rs  video.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: config.rs  frame.rs  lib.rs  messages.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  main.rs  session.rs  signaling.rs  tls.rs  web.rs
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
gpg/: beam.gpg
packaging/: beam-xorg.conf  index.html  install-beam.sh  nfpm.yaml
packaging/scripts/: postinstall.sh  postremove.sh  preremove.sh
scripts/: beam-doctor  dev-setup.sh  install.sh  uninstall.sh
systemd/: beam.service
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: clipboard.ts  connection.test.ts  connection.ts  filetransfer.ts  icons.ts  input.test.ts  input.ts  keymap.ts  login.ts  main.ts  platform.ts  renderer.ts  resize.ts  session.ts  settings.ts  ui-state.ts  ui.ts  webcodecs-renderer.test.ts  webcodecs-renderer.ts
