[package]
name = "beam-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Beam remote desktop per-user agent"

[[bin]]
name = "beam-agent"
path = "src/main.rs"

[dependencies]
beam-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
webrtc = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-video = { workspace = true }
x11rb = { workspace = true }
input-linux = { workspace = true }
nix = { workspace = true }
libpulse-binding = { workspace = true }
libpulse-simple-binding = { workspace = true }
audiopus = { workspace = true }
rtcp = "0.17"
libc = "0.2"
bytes = "1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-native-certs = "0.8"
futures-util = "0.3"
urlencoding = "2"
rustls-pemfile = { workspace = true }
