[package]
name = "beam-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared protocol types for Beam remote desktop"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
