[package]
name = "beam-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Beam remote desktop server"

[[bin]]
name = "beam-server"
path = "src/main.rs"

[dependencies]
beam-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
hyper-util = { workspace = true }
jsonwebtoken = { workspace = true }
pam = { workspace = true }
nix = { workspace = true }
bytes = "1"
libc = "0.2"
pem = "3"

[dev-dependencies]
http-body-util = "0.1"
